# cs336_assignments_and_notes

./: .gitignore  README.md  run_analysis.py
assignment1-basics/: bpe_training_profile.prof  bpe_training_profile_owt.prof  pyproject.toml
assignment1-basics/cs336_basics/: .vscode.code-workspace  bpe_training_profile.prof  experiment_check_device.py  experiment_generation.py  experiment_minibatch.py  experiment_preprocess.py  lr_tuning_test.py  pretokenization_example.py  run_bpe_train_on_openwebtext.py  run_bpe_train_on_tinystories.py  run_experiment.ps1  tokenizer.py  transformer_generation.py  transformer_model.py  transformer_training.py  transformer_training_loop.py
assignment1-basics/cs336_basics/abandoned_versions/: tokenizer - no_encoding_or_decoding.py  tokenizer - optimize _v0.py  tokenizer_unoptimized.py
assignment1-basics/cs336_basics/run_bpe_train_on_owt_output/: merges.txt
assignment1-basics/cs336_basics/run_bpe_train_on_tinystories_output/: merges.txt
assignment1-basics/run_bpe_train_on_openwebtext_output/: merges.txt  vocab.json
assignment1-basics/run_bpe_train_on_tinystories_output/: merges.txt  vocab.json
assignment1-basics/tests/: adapters.py  test_tokenizer.py
assignment5-alignment/: pyproject.toml
assignment5-alignment/cs336_alignment/: baseline.py  baseline_anal.py  log_generations.py  log_probs.py  masked_normalize.py  per_token_entropy.py  run_sft_exp.py  sft_experiment.py  sft_microbatch_train_step.py  tokenize_prompt.py
assignment5-alignment/tests/: adapters.py  conftest.py
cs336_笔记/: Assignment1-basics-chapter1&2.md  Assignment1-basics-chapter3.md  Assignment1-basics-chapter4.md  Assignment1-basics-chapter5.md  Assignment1-basics-chapter6.md  Assignment1-basics-chapter7.md  Assignment1-basics.md  Assignment5-basics-chapter1, 2, 3.md  Assignment5-basics-chapter4,.md  Assignment5-basics-chapter4.md  tokenizer.py.md  tokenizer_unoptimized.py.md
cs336_笔记/.makemd/: fileCache.mdc  superstate.mdc
